completed Stop Watch

--- a/Stop Watch/app/src/main/AndroidManifest.xml
+++ b/Stop Watch/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.StopWatch"
         tools:targetApi="31">
         <activity
-            android:name=".StopWatchAcitivity"
+            android:name=".StopWatchActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
