--- a/To Do App/app/build.gradle
+++ b/To Do App/app/build.gradle
@@ -36,6 +36,7 @@ android {
 
 dependencies {
 
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.10"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.10"
     implementation 'androidx.appcompat:appcompat:1.6.1'
